@@ -6,6 +6,7 @@ import net.minecraft.MethodsReturnNonnullByDefault;
 import net.minecraft.network.chat.Component;
 import net.minecraft.world.item.TooltipFlag;
 
+import java.util.Collections;
 import java.util.List;
 
 @ParametersAreNonnullByDefault
@@ -15,6 +16,6 @@ public class EmptyRenderer<V> implements IIngredientRenderer<V> {
 
     @Override
     public List<Component> getTooltip(V ingredient, TooltipFlag tooltipFlag) {
-        return List.of();
+        return Collections.emptyList();
     }
 }
